Changelog
---------

Next release 1.5
````````````````
* Work around for Issue 5289 on Solaris.
* Add CONTRIBUTORS file to package.

1.4 (2012-12-11)
````````````````
* Automatically clean up memory when garbage collected.
* Add memory management section to documentation.

1.3 (2012-05-30)
````````````````
* Test against libmagic 5.11.

1.2 (2012-03-26)
````````````````
* Add `command line invocation <http://filemagic.readthedocs.org/en/latest/command.html>`_.

1.1 (2012-03-16)
````````````````
* Sphinx documentation on `Read the Docs <http://readthedocs.org/>`_
* Prevent segmentation fault when using list() with older libmagic

1.0 (2012-03-15)
````````````````
* First version released